--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,6 +27,11 @@ h1, h3, p#today-date {
     width: 100%;
     text-align: center;
     padding-top: 10px;
+    font-family: 'Comfortaa', cursive;
+}
+
+p {
+    font-family: 'Montserrat','Open Sans', sans-serif;
 }
 
 /* planner section */
@@ -34,6 +39,7 @@ div#planner {
     background-color: rgb(146,220,207);
     width: 80%;
     margin: 10%;
+    margin-top: 5%;
 }
 
 div.hour {
@@ -70,12 +76,16 @@ div.current {
 p.time {
     width: 100%;
     text-align: right;
+    font-family: 'Montserrat','Open Sans', sans-serif;
 }
 
 button {
     background-color: rgb(251,152,216);
     border: 3px solid;
-    border-color:  rgb(180, 95, 150); ;
+    border-color:  rgb(180, 95, 150); 
+    font-family: 'Montserrat','Open Sans', sans-serif;
+    width: 100%;
+    height: 100%;
 
 }
 
